fix drawer overflow

--- a/apps/web/src/main.css
+++ b/apps/web/src/main.css
@@ -125,6 +125,7 @@ html {
 body {
   font-family: 'Roboto', sans-serif;
   overflow-y: scroll;
+  overflow-x: hidden;
   position: relative;
   background-color: var(--color-blue-invisible);
 }
